@@ -154,88 +154,9 @@ from keyring.credentials import Credential
 from keyring.credentials import SimpleCredential as BaseCredential
 from keyring.credentials import EnvironCredential
 from keyring.backends.Google import EnvironCredential as GoogleEnvironCredential
-
-class BaseKeyczarCrypter(Crypter):
-    """Base Keyczar keyset encryption and decryption.
-       The keyset initialisation is deferred until required.
-    """
-
-    @abc.abstractproperty
-    def keyset_location(self):
-        """Location for the main keyset that may be encrypted or not"""
-        pass
-
-    @abc.abstractproperty
-    def encrypting_keyset_location(self):
-        """Location for the encrypting keyset.
-           Use None to indicate that the main keyset is not encrypted
-        """
-        pass
-
-    @property
-    def crypter(self):
-        """The actual keyczar crypter"""
-        if not hasattr(self, '_crypter'):
-            # initialise the Keyczar keysets
-            if not self.keyset_location:
-                raise ValueError('No encrypted keyset location!')
-            reader = keyczar.readers.CreateReader(self.keyset_location)
-            if self.encrypting_keyset_location:
-                encrypting_keyczar = keyczar.Crypter.Read(
-                    self.encrypting_keyset_location)
-                reader = keyczar.readers.EncryptedReader(reader,
-                                                         encrypting_keyczar)
-            self._crypter = keyczar.Crypter(reader)
-        return self._crypter
-
-    def encrypt(self, value):
-        """Encrypt the value.
-        """
-        if not value:
-            return ''
-        return self.crypter.Encrypt(value)
-
-    def decrypt(self, value):
-        """Decrypt the value.
-        """
-        if not value:
-            return ''
-        return self.crypter.Decrypt(value)
-
-class KeyczarCrypter(BaseKeyczarCrypter):
-    """A Keyczar crypter using locations specified in the constructor
-    """
-
-    def __init__(self, keyset_location, encrypting_keyset_location=None):
-        self._keyset_location = keyset_location
-        self._encrypting_keyset_location = encrypting_keyset_location
-
-    @property
-    def keyset_location(self):
-        return self._keyset_location
-
-    @property
-    def encrypting_keyset_location(self):
-        return self._encrypting_keyset_location
-
-class EnvironKeyczarCrypter(BaseKeyczarCrypter):
-    """A Keyczar crypter using locations specified by environment vars
-    """
-
-    KEYSET_ENV_VAR = 'KEYRING_KEYCZAR_ENCRYPTED_LOCATION'
-    ENC_KEYSET_ENV_VAR = 'KEYRING_KEYCZAR_ENCRYPTING_LOCATION'
-
-    @property
-    def keyset_location(self):
-        val = os.environ.get(self.KEYSET_ENV_VAR)
-        if not val:
-            raise ValueError('%s environment value not set' %
-                             self.KEYSET_ENV_VAR)
-        return val
-
-    @property
-    def encrypting_keyset_location(self):
-        return os.environ.get(self.ENC_KEYSET_ENV_VAR)
+from keyring.backends.keyczar import BaseCrypter as BaseKeyczarCrypter
+from keyring.backends.keyczar import Crypter as KeyczarCrypter
+from keyring.backends.keyczar import EnvironCrypter as EnvironKeyczarCrypter
 
 class EnvironGoogleDocsKeyring(GoogleDocsKeyring):
     """Google Docs keyring using keyczar initialized from environment
