@@ -23,11 +23,14 @@ Next release
   - WinVaultKeyring -> backends.Windows.WinVaultKeyring
   - Win32CryptoRegistry -> backends.Windows.RegistryKeyring
   - select_windows_backend -> backends.Windows.select_windows_backend
-  - GoogleDocsKeyring -> keyring.backends.Google.DocsKeyring
+  - GoogleDocsKeyring -> backends.Google.DocsKeyring
   - Credential -> keyring.credentials.Credential
   - BaseCredential -> keyring.credentials.SimpleCredential
   - EnvironCredential -> keyring.credentials.EnvironCredential
-  - GoogleEnvironCredential -> keyring.backends.Google.EnvironCredential
+  - GoogleEnvironCredential -> backends.Google.EnvironCredential
+  - BaseKeyczarCrypter -> backends.keyczar.BaseCrypter
+  - KeyczarCrypter -> backends.keyczar.Crypter
+  - EnvironKeyczarCrypter -> backends.keyczar.EnvironCrypter
 
 ---
 1.0
